--- a/peccatorum/index.html
+++ b/peccatorum/index.html
@@ -74,6 +74,7 @@
 		.modal-content {
 			vertical-align:middle;
 			max-height: 94%;
+			max-width: 94%;
 			margin: auto;
 			z-index: 2;
 			box-shadow: 0 0 12px #000;
