--- a/peccatis/index.html
+++ b/peccatis/index.html
@@ -1,7 +1,7 @@
 <HTML>
 <HEAD>
 	<META name="viewport" content="width=device-width, initial-scale=1">
-	<TITLE>Peccatorum</TITLE>
+	<TITLE>Peccatis</TITLE>
 	<STYLE>
 		BODY{
 			background-color: #000;
